fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ img {
 		width: 30%;
 		height: 400px;
 		display: flex;
+		justify-content: space-between;
 		flex-direction: column; 
 	}
 
@@ -261,6 +262,7 @@ img {
 		width: 20%;
 		height: 400px;
 		display: flex;
+		justify-content: space-between;
 		flex-direction: column; 
 	}
 
@@ -269,12 +271,13 @@ img {
 		width: 100%;
 		padding-left: 1.5%;
 		padding-bottom: 0.5%;
+		height: 200px;
 	}
 
 	.img-3 {
 		float: left;
 		max-width: 100%;
-		max-height: 42%;
+		height: 200px;
 		padding-left: 1.5%;
 		padding-top: 0.5%;
 	}
@@ -283,7 +286,7 @@ img {
 		width: 100%;
 		padding-left: 1.5%;
 		padding-bottom: 0.5%;
-		max-height: 35%;
+		height: 33.3333333333%;
 	}
 
 	.img-5 {
@@ -291,12 +294,13 @@ img {
 		padding-left: 1.5%;
 		padding-top: 0.5%;
 		padding-bottom: 0.5%;
-		max-height: 35%;
+		height: 33.3333333333%;
 	}
 
 	.img-6 {
+		padding-top: 0.5%;
 		max-width: 100%;
 		padding-left: 1.5%;
-		max-height: 30%;
+		height: 33.3333333333%;
 	}
 }
